@@ -23,6 +23,8 @@ documents those changes that are of interest to users and admins.
     JOB_RESIZING. More work is needed for correct accounting.
  -- When changing a job size using scontrol, generate a script that can be
     executed by the user to reset SLURM environment variables.
+ -- Modify select/linear and select/cons_res to use resources released via job
+    resizing.
  -- Added to contribs foundation for Perl extension for slurmdb library.
 
 * Changes in SLURM 2.2.0.pre4
